# EPubEdit

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.8db38e1  CMakeLists.txt.user.fccc349  README.md  arab.txt  chin.txt  eng.txt  frog.txt  htmlentities.txt  lang_codes  mit.license.txt  readdelf.txt1  readelf.txt2  rus.txt  span.txt  turtl.asc
cmake/: FindTidy.cmake
epubedit/: CMakeLists.txt
epubedit/include/: basicconfig.h  config.h
epubedit/include/TODOSHIT/: basicconfig.h
epubedit/include/document/: authors.h  boohenums.h  bookenums.h  bookpointers.h  bookstructs.h  epubdocument.h  foaf.h  library.h  marcrelator.h  metadata.h  options.h  series.h  sharedauthordata.h  sharedbookdata.h  uniquestring.h
epubedit/include/document/OLDSHIT/: epubmetadata.h
epubedit/include/forms/: configurationeditor.h  languagetagbuilderdialog.h
epubedit/include/widgets/: codeedit.h  epubedit.h  htmledit.h  iepubeditor.h  imageedit.h
epubedit/src/: CMakeLists.txt  basicconfig.cpp  bookdatabase.cpp  config.cpp  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h
epubedit/src/OLDSHIT/: basicconfig.cpp
epubedit/src/document/: authors.cpp  dcterms.cpp  epubdocument.cpp  foaf.cpp  library.cpp  marcrelator.cpp  metadata.cpp  options.cpp  series.cpp  sharedauthordata.cpp  sharedbookdata.cpp  title.cpp
epubedit/src/document/OLDSHIT/: epubmetadata.cpp
epubedit/src/forms/: aboutdialog.cpp  aboutdialog.h  abstractepubeditor.cpp  abstractepubeditor.h  authorlist.cpp  authorlist.h  basewidget.cpp  basewidget.h  bookstructs.h  centralwidget.cpp  centralwidget.h  codeedit.cpp  codeedit.h  common.cpp  common.h  config.cpp  config.h  configurationeditor.cpp  configurationeditor.h  editorwidget.cpp  editorwidget.h  emultisplitter.cpp  emultisplitter.h  epubcontents.cpp  epubcontents.h  epubedit.cpp  epubedit.h  epubeditor.cpp  epubeditor.h  filedialog.cpp  filedialog.h  footerwidget.cpp  footerwidget.h  headerfooter.cpp  headerfooter.h  headerwidget.cpp  headerwidget.h  html.h  iepubeditor.h  imageedit.cpp  (+35 more)
epubedit/src/forms/OLD-SHIT/: authorlist.cpp  authorlist.h  epubedit.cpp  epubedit.h  footerwidget.cpp  footerwidget.h  headerwidget.cpp  headerwidget.h  toolbar.h  toolbarwidget.cpp  toolbarwidget.h
epubedit/src/forms/private/: abstractepubeditorprivate.cpp  abstractepubeditorprivate.h  codeeditorprivate.cpp  codeeditorprivate.h  epubeditorprivate.cpp  epubeditorprivate.h  iepubdocument.cpp  iepubdocument.h
epubedit/src/icons/: bluedot.xcf  crossInSquare.xcf  darkgreendot.xcf  dash.xcf  fold.xcf  reddot.xcf  unfold.xcf
epubedit/src/widgets/: codeedit.cpp  epubedit.cpp  htmledit.cpp  imageedit.cpp
libs/libepubedit/: CMakeLists.txt
libs/libepubedit/include/: bookdatabase.h  config.h  epubedit.h  iebookdocument.h  options.h
libs/libepubedit/include/document/: authors.h  bookpointers.h  dcterms.h  ebookbasemetadata.h  ebookcommon.h  ebookmetadata.h  epubcommon.h  epubcontainer.h  epubdocument.h  epubmetadata.h  foaf.h  htmlparser.h  languages.h  library.h  marcrelator.h  options.h  series.h  uniquestring.h
libs/libepubedit/include/forms/: configurationeditor.h  languagetagbuilderdialog.h  metadataform.h
libs/libepubedit/include/interface/: iebookdocument.h
libs/libepubedit/include/util/: csvsplitter.h
libs/libepubedit/src/: bookdatabase.h  config.cpp  epubedit.cpp  options.cpp
libs/libepubedit/src/document/: authors.cpp  dcterms.cpp  ebookbasemetadata.cpp  ebookcommon.cpp  ebookmetadata.cpp  epubbasemetadata.h  epubcommon.cpp  epubcontainer.cpp  epubdocument.cpp  epubdocument_p.cpp  epubdocument_p.h  epubmetadata.cpp  foaf.cpp  htmlparser.cpp  iebookdocument.cpp  iebookdocument.h  iebookinterface.h  library.cpp  marcrelator.cpp  series.cpp  uniquestring.cpp
libs/libepubedit/src/forms/: configurationeditor.cpp  languagetagbuilderdialog.cpp  languagetagbuilderdialogresource.qrc  metadataform.cpp
libs/libepubedit/src/metadata/: authors.cpp  dcterms.cpp  ebookcommon.cpp  ebookmetadata.cpp  foaf.cpp
libs/libsmlibraries/: CMakeLists.txt  SMLibrariesConfig.cmake  SMLibrariesTargets.cmake
libs/libsmlibraries/cmake/: FindSMWidgetsConfig.cmake  SMLibrariesConfig.cmake.in
libs/libsmlibraries/doxygen/: Doxyfile.in
libs/libsmlibraries/examples/: CMakeLists.txt
libs/libsmlibraries/include/: CircularBuffer.h  LabelledComboBox  LabelledDoubleSpinBox  LabelledExSpinBox  LabelledLineEdit  LabelledSpinBox  LabelledTextField  LabelledWidgets  abstractdockitem.h  abstractdockwidget.h  abstractlabelledspinbox.h  abstractlabelledwidget.h  buttonwidget.h  dockcorner.h  dockfooter.h  dockheader.h  dockitem.h  docklistitem.h  docksplitter.h  docktoolbar.h  docktypes.h  dockwidget.h  exspinbox.h  extendedcolordialog.h  filedownloader.h  footerwidget.h  headerfooterwidget.h  headerwidget.h  helpdialogs.h  hexformatdelegate.h  iso639codes.h  labelledcombobox.h  labelleddoublespinbox.h  labelledexspinbox.h  labelledlineedit.h  labelledspinbox.h  labelledtextfield.h  labelledwidgets.h  labelwidget.h  languages.h  (+15 more)
libs/libsmlibraries/src/: CMakeLists.txt  abstractdockitem.cpp  abstractdockwidget.cpp  abstractlabelledspinbox.cpp  abstractlabelledwidget.cpp  borderlayout.cpp  buttonwidget.cpp  collection.cpp  comment.cpp  dockcorner.cpp  dockfooter.cpp  dockheader.cpp  dockitem.cpp  docklistitem.cpp  docksplitter.cpp  docktoolbar.cpp  dockwidget.cpp  emitter.cpp  exspinbox.cpp  extendedcolordialog.cpp  filedownloader.cpp  footerwidget.cpp  headerfooterwidget.cpp  headerwidget.cpp  helpdialogs.cpp  hexformatdelegate.cpp  iso639codes.cpp  labelledcombobox.cpp  labelleddoublespinbox.cpp  labelledexspinbox.cpp  labelledlineedit.cpp  labelledspinbox.cpp  labelledtextfield.cpp  labelwidget.cpp  languages.cpp  languagetagbuilderdialog.cpp  languagetagbuilderdialog.qrc  listbuttonwidget.cpp  listwidget.cpp  multisplitter.cpp  (+11 more)
libs/libsmlibraries/tests/: CMakeLists.txt
libs/qyamlcpp/: CMakeLists.txt
libs/qyamlcpp/include/: collection.h  emitter.h  node.h  parse.h
plugins/epubplugin/: CMakeLists.txt
plugins/epubplugin/src/: epubplugin.cpp  epubplugin.h  epubplugin_global.h
(+1125 files in other folders)
